# PlACloud

./: .gitignore  CMakeLists.txt  PlACloud.kdev4  commons.h  main.cpp  moc_primeWindow.cpp  ui_primeWindow.h
LaTeX/: fi-logo.514pk  fi-logo.600pk  fi-logo.mf  first.tex  fit10.clo  fit11.clo  fit12.clo  fithesis2.cls  intro.tex  literature.bib  outro.tex  second.tex  thesis.tex  third.tex
doc/: CloudPlasmaActive.vpp  DokumentVize.txt
gui/: PlACloud.cpp  PlACloud.h  PlACloud.ui
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml  qt-Debug.mk  qt-Debug.pro  qt-Release.pro
source/PlACloud/: moc_application.cpp  moc_mainWindow.cpp  moc_primeWindow.cpp  ui_primeWindow.h
source/PlACloud/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  qt-Debug.mk  qt-Debug.pro  qt-Release.mk  qt-Release.pro
source/PlACloud/src/: commons.h  main.cpp
source/PlACloud/src/PlaCloud/: application.cpp  application.h  configurator.cpp  configurator.h  fileOwnCloud.cpp  fileOwnCloud.h
source/PlaACloud/: PlaACloud.desktop  PlaACloud.pro  PlaACloud_harmattan.desktop  main.cpp
src/: application.cpp  application.h  configurator.cpp  configurator.h  fileOwnCloud.cpp  fileOwnCloud.h  kConfigOwnCloud.cpp  kConfigOwnCloud.h  main.cpp
src/PlaCloud/: application.h  configurator.cpp
src/gui/: primeWindow.cpp  primeWindow.h  primeWindow.ui
(+5 files in other folders)
